--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Card from "../components/Card.astro"
+import Layout from "../layouts/Layout.astro"
+import Works from "../components/Sections/Works.astro"
+import Profile from "../components/Sections/Profile.astro"
 ---
-
 <Layout>
-	<Welcome />
+	
+	<Profile/>
+	<Works/>
+
 </Layout>
