--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -2,7 +2,7 @@
 const {title, text} = Astro.props
 ---
 
-<div class="bg-red-600">
-    <h1>{title}</h1>
-    <p>{text}</p>
+<div class="font-[sans-serif] font-bold text-[#FFF] ml-[10%]">
+    <h1 class="text-6xl" >{title}</h1>
+    <p class="text-4xl flex justify-center">{text}</p>
 </div>
