--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -19,8 +19,8 @@ import './src/styles/global.css'
 <style>
 	html,
 	body {
+		background: #161722;
 		margin: 0;
-		width: 100%;
-		height: 100%;
+		
 	}
 </style>
