--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,10 +3,11 @@ import Card from "../components/Card.astro"
 import Layout from "../layouts/Layout.astro"
 import Works from "../components/Sections/Works.astro"
 import Profile from "../components/Sections/Profile.astro"
+import Nav from "../components/Sections/Nav.astro"
 ---
 <Layout>
 	
-	
+	<Nav/>
 	<Profile/>
 	<Works/>
 	
