--- a/src/components/Sections/Nav.astro
+++ b/src/components/Sections/Nav.astro
@@ -2,6 +2,9 @@
 
     <ul class="flex space-x-8">
         <li>
+            <a href="#Inicio">Inicio</a>
+        </li>
+        <li>
             <a href="#Trabajos">Trabajos</a>
         </li>
         <li>
