--- a/src/components/Sections/Profile.astro
+++ b/src/components/Sections/Profile.astro
@@ -2,10 +2,10 @@
 import Card from "../Card.astro"
 ---
 
-<section class="flex flex-col sm:flex-row items-center justify-center sm:justify-start gap-6 p-4 mt-[15%]">
+<section class="w-screen h-[calc(100vh-64px)] flex flex-col sm:flex-row items-center justify-center sm:justify-start">
     <Card title = "Agustin Campanella", text="Programador Universitario"/>
   <img
-    class="w-[35%] max-w-xs border-4 rounded-full absolute right-0 mr-[20%]"
+    class="max-w-xs border-4 rounded-full absolute right-0 mr-[20%]"
     src="profile.webp"
     alt="Foto de perfil de Agustín Campanella"
   />
