Cambios works + Experience
Cambios en la seccion work + se añade la seccion experience

--- a/src/components/Sections/Profile.astro
+++ b/src/components/Sections/Profile.astro
@@ -2,11 +2,12 @@
 import Card from "../Card.astro"
 ---
 
-<section class="w-screen h-[calc(100vh-64px)] flex flex-col sm:flex-row items-center justify-center sm:justify-start">
+<section class=" w-screen h-[calc(100vh-64px)] flex flex-col sm:flex-row items-center justify-center sm:justify-start">
     <Card title = "Agustin Campanella", text="Programador Universitario"/>
   <img
-    class="max-w-xs border-4 rounded-full absolute right-0 mr-[20%]"
+    class="h-[50%] border-4 rounded-full absolute right-0 mr-[20%]"
     src="profile.webp"
     alt="Foto de perfil de Agustín Campanella"
   />
 </section>
+
