--- a/src/components/Sections/Works.astro
+++ b/src/components/Sections/Works.astro
@@ -1,16 +1,14 @@
 ---
-import Trabajo from "../Trabajo.astro"
+import Trabajo from "../Proyecto.astro"
+
 ---
 
 <section class="w-[90%] grid justify-center items-center mx-auto ">
-<h1 class="flex flex-col items-center font-[sans-serif] font-bold text-[50px] pb-[30px]">Trabajos</h1>
+<h1 class="flex flex-col items-center font-[sans-serif] font-bold text-[50px] pb-[30px]">Proyectos</h1>
 
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3">
-    <Trabajo title="Video Juego" text="Plataformero hecho con GODOT ENGINE" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
+<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2">
     <Trabajo title="Educar Para Transformar" text="Pagina web para una institucion educativa" img="EpT.webp" alt="Pagina Web Educativa"/>
-    <Trabajo title="Trabajo 1" text="Ni idea capo" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
-    <Trabajo title="Trabajo 1" text="Ni idea capo" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
-    <Trabajo title="Trabajo 1" text="Ni idea capo" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
+    <Trabajo title="Video Juego" text="Plataformero hecho con GODOT ENGINE" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
 </div>
 
 </section>
