--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,14 +1,15 @@
 ---
-import Card from "../components/Card.astro"
 import Layout from "../layouts/Layout.astro"
 import Works from "../components/Sections/Works.astro"
 import Profile from "../components/Sections/Profile.astro"
 import Nav from "../components/Sections/Nav.astro"
+import Experience from "../components/Sections/Experience.astro"
 ---
 <Layout>
 	
 	<Nav/>
 	<Profile/>
+	<Experience/>
 	<Works/>
 	
 </Layout>
