--- a/src/components/Sections/Nav.astro
+++ b/src/components/Sections/Nav.astro
@@ -1,8 +1,11 @@
-<section class="border-b border-gray-800 shadow-[0_4px_4px_-2px_rgba(0,0,0,0.7)] font-[sans-serif] font-bold flex flex-col sm:flex-row justify-end p-4 pr-10">
+<section class="bg-[#161722] border-b border-gray-800 shadow-[0_4px_4px_-2px_rgba(0,0,0,0.7)] font-[sans-serif] font-bold flex flex-col sm:flex-row justify-end p-4 pr-10">
 
     <ul class="flex space-x-8">
         <li>
             <a href="#Inicio">Inicio</a>
+        </li>
+        <li>
+            <a href="#Experiencia">Experiencia</a>
         </li>
         <li>
             <a href="#Trabajos">Trabajos</a>
