--- a/src/components/Sections/Profile.astro
+++ b/src/components/Sections/Profile.astro
@@ -2,7 +2,7 @@
 import Card from "../Card.astro"
 ---
 
-<section class=" w-screen h-[calc(100vh-64px)] flex flex-col sm:flex-row items-center justify-center sm:justify-start">
+<section class="bg-[#161722] w-screen h-[calc(100vh-64px)] flex flex-col sm:flex-row items-center justify-center sm:justify-start">
     <Card title = "Agustin Campanella", text="Programador Universitario"/>
   <img
     class="h-[50%] border-4 rounded-full absolute right-0 mr-[20%]"
