--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,7 +20,7 @@ import './src/styles/global.css'
 	html,
 	body {
 		
-		background: #161722;
+		background: black;
 		margin: 0;
 		color: #fff;
 	}
