--- a/src/components/EsperienceCard.astro
+++ b/src/components/EsperienceCard.astro
@@ -19,7 +19,7 @@ const { title, company, date_start, date_end, description } = experience;
     </p>
   </div>
   <ul
-    class="leading-7 list-disc text-base font-medium list-inside text-slate-400 dark:text-gray-300"
+    class="leading-7 list-disc text-base font-medium list-inside text-slate-400"
   >
     {description.map((item: string) => <li>{item}</li>)}
   </ul>
