--- a/src/components/Sections/Works.astro
+++ b/src/components/Sections/Works.astro
@@ -3,12 +3,13 @@ import Trabajo from "../Proyecto.astro"
 
 ---
 
-<section class="w-[90%] grid justify-center items-center mx-auto ">
-<h1 class="flex flex-col items-center font-[sans-serif] font-bold text-[50px] pb-[30px]">Proyectos</h1>
+<section class="bg-[#161722] w-[80%] grid justify-center items-center mx-auto pt-8">
 
-<div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2">
-    <Trabajo title="Educar Para Transformar" text="Pagina web para una institucion educativa" img="EpT.webp" alt="Pagina Web Educativa"/>
-    <Trabajo title="Video Juego" text="Plataformero hecho con GODOT ENGINE" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
-</div>
+    <h1 class="flex flex-col items-center font-[sans-serif] font-bold text-[50px] pb-[30px]">Proyectos</h1>
+        
+    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-2">
+        <Trabajo title="Educar Para Transformar" text="Pagina web para una institucion educativa" img="EpT.webp" alt="Pagina Web Educativa"/>
+        <Trabajo title="Saltarina" text="Plataformero hecho con GODOT ENGINE" img="Godot.webp" alt="Videojuego hecho en Godot engine"/>
+    </div>
 
 </section>
