--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import Works from "../components/Sections/Works.astro"
 import Profile from "../components/Sections/Profile.astro"
 import Nav from "../components/Sections/Nav.astro"
 import Experience from "../components/Sections/Experience.astro"
+import Contact from "../components/Sections/Contact.astro"
 ---
 <Layout>
 	
@@ -11,5 +12,6 @@ import Experience from "../components/Sections/Experience.astro"
 	<Profile/>
 	<Experience/>
 	<Works/>
+	<Contact/>
 	
 </Layout>
