--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,5 @@
 ---
+import '@fontsource-variable/inter'
 import './src/styles/global.css'
 ---
 
@@ -19,9 +20,6 @@ import './src/styles/global.css'
 <style>
 	html,
 	body {
-		
-		background: black;
-		margin: 0;
-		color: #fff;
+		font-family: 'Inter Variable', sans-serif;
 	}
 </style>
