--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,13 +3,14 @@ import Layout from "../layouts/Layout.astro"
 import Profile from "../components/Sections/Profile.astro"
 import Experience from "../components/Sections/Experience.astro"
 import Contact from "../components/Sections/Contact.astro"
+import Section from "../components/Section.astro"
 ---
 
 
 <Layout>
-	
-	<Profile/>
-	<Experience/>
-	<Contact/>
+	<Section/>
+	<Section/>
+	<Section/>
+	<Section/>
 	
 </Layout>
